--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,8 @@
 <resources>
-
-    <!-- Base application theme. REMOVED -> we dont use theme with ActionBar
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    -->
-
+    <!-- don't use action bar, because we use ToolBar -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- customize if you want
+        <!-- customized styles -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        -->
     </style>
-
 </resources>
